# oskman

./: .editorconfig  .gitmodules  Cargo.toml  README.md  build.rs  capture.sh  justfile  tauri.conf.json
libfido2-sys/: Cargo.toml  build.rs  wrapper.h
libfido2-sys/src/: lib.rs
oskman-schemas/: Cargo.toml  build.rs
oskman-schemas/src/: schemas.rs
src/: fido2.rs  main.rs
ui/: .gitignore  package.json  tsconfig.json  vite.config.js
ui/src/: fido.ts  index.html  main.ts
