[package]
name = "oskman"
version = "0.0.0"
description = ""
authors = ["Thomas Duboucher <thomas@duboucher.eu>"]
license = "MIT / Apache-2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
log = { version = "0.4.17", features = ["std", "serde"] }
env_logger = "0.10.0"
hex = "0.4"
inotify = "0.10"

[dependencies.libfido2-sys]
path = "./libfido2-sys"
default_features = false
features = []

[dependencies.oskman-schemas]
path = "./oskman-schemas"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
