[package]
name = "oskman-schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
serde = "1.0"
serde_json = "1.0"
schemars = "0.8"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
